// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-hosted-github-sdk - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Build and deploy GitHub Copilot SDK apps to Azure. USE FOR: build copilot app, create copilot app, build with copilot SDK, scaffold copilot project, new copilot app, copilot SDK, copilot agent, copilot service, copilot-powered app, foundry agent, deploy copilot app, deploy to azure, host on azure. DO NOT USE FOR: using Copilot (not building with it), Copilot Extensions, Azure Functions without Copilot, general web apps without copilot SDK, AI model deployment alone.",
  "extractedKeywords": [
    "agent",
    "alone",
    "apps",
    "azure",
    "bicep",
    "build",
    "building",
    "container",
    "copilot",
    "copilot-powered",
    "create",
    "deploy",
    "deployment",
    "extensions",
    "foundry",
    "functions",
    "general",
    "github",
    "host",
    "hosted",
    "identity",
    "key vault",
    "mcp",
    "model",
    "project",
    "scaffold",
    "sdk",
    "service",
    "using",
    "with",
    "without",
  ],
  "name": "azure-hosted-github-sdk",
}
`;

exports[`azure-hosted-github-sdk - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "agent",
  "alone",
  "apps",
  "azure",
  "bicep",
  "build",
  "building",
  "container",
  "copilot",
  "copilot-powered",
  "create",
  "deploy",
  "deployment",
  "extensions",
  "foundry",
  "functions",
  "general",
  "github",
  "host",
  "hosted",
  "identity",
  "key vault",
  "mcp",
  "model",
  "project",
  "scaffold",
  "sdk",
  "service",
  "using",
  "with",
  "without",
]
`;
